# dynamic_scene_relighting

./: .gitignore  CMakeLists.txt  README.md  analyze_calibration_pairs.py  calibration_pairs.csv  collect_calibration_pairs.py  d415_intrinsics.csv  extrinsics.csv  projector_intrinsics.csv  realsense_handler.py  requirements.txt  run_depth_coloring_demo.py  test_fullscreen.py
data/: extrinsics.csv  projector_intrinsics.csv
notebooks/: test_calibration_optimization.ipynb
python/: analyze_calibration_pairs.py  calibration_utils.py  collect_calibration_pairs.py  interface.py  projector_utils.py  pyshaders.py  realsense_handler.py  run_depth_coloring_demo.py  run_mediapipe_face_mesh.py  test_pyglet_shaders.py  window_manager.py
src/: realsense_handler.cpp  realsense_handler.h  rs-hello-realsense.cpp  shader.cpp  shader.h  shader.vert
